# file-templates

./: .gitignore  .prettierignore  .prettierrc  README.md  biome.json  bun.lockb  bunfig.toml  compose.yaml  flake.nix  justfile  lefthook.yml  package.json  postgres.sh  self.README.md
.github/workflows/: check.yml  ci.yml  rust.yml
.husky/: .available-commands  pre-commit
basic-program/: .dockerignore  Dockerfile  README.md  package.json  tsconfig.json
basic-program/src/: main.ts
basic-program/tests/: main.test.ts
biome-json/: biome.jsonc
docker-compose/: compose.yaml
docker-postgres/: postgres.sh
dockerfile/: Dockerfile  README.md  index.ts  package.json
monorepo/: README.md  package.json
monorepo/client/: README.md  index.ts  package.json
monorepo/server/: index.ts  package.json
openapi/: README.md
openapi/database/: drop.sh  launch.sh  seed.sql  up.sh
openapi/hono-zod-openapi/: .gitignore  README.md  bun.lockb  drizzle.config.ts  package.json
openapi/poem-openapi/: .gitignore  Cargo.toml  README.md
openapi/poem-openapi/src/: entity.rs  main.rs
openapi/tests/: get-1.sh  post.sh  select.sh
precommit/: README.md  lefthook.yml  package.json
prisma/: .gitignore  Dockerfile  README.md  bun.lockb  default.nix  package.json
prisma/path-to/: package-lock.json
rust-app/: Dockerfile  default.nix
sample-program/: Dockerfile  README.md  bun.lockb  package.json  tsconfig.json
sample-program/tests/: main.test.ts
trpc/: README.md  package.json
trpc/client/: index.ts  package.json
trpc/server/: index.ts  package.json
(+19 files in other folders)
