[package]
name = "poem-openapi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "time"] }
tokio = { version = "1.41.0", features = ["full"] }
validators = "0.25.3"
