[package]
name = "poem-openapi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
serde = "1.0.213"
serde_json = "1.0.132"
sonic-rs = "0.3.14"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
validators = "0.25.3"
